--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">VLOC</string>
     <string name="login">Login</string>
-    <string name="message_welcome_page">Come join and share your story here with Us</string>
+    <string name="message_welcome_page">Come join and share your destination here with Us</string>
     <string name="title_welcome_page">Hi, There!</string>
     <string name="title_signup_page">Please complete your data first</string>
     <string name="email">Email</string>
@@ -12,10 +12,10 @@
     <string name="message_main_page">Welcome</string>
     <string name="logout">Log Out</string>
     <string name="signup">Sign Up</string>
-    <string name="story_name">My Story</string>
+    <string name="destination_name">My Story</string>
     <string name="description">Once Upon a Time</string>
     <string name="date">11 December 2003</string>
-    <string name="story_photo">Photo\'s story</string>
+    <string name="destination_photo">Photo\'s destination</string>
     <string name="camera">CAMERA</string>
     <string name="upload">UPLOAD</string>
     <string name="gallery">GALLERY</string>
@@ -39,4 +39,5 @@
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_profile">Frisnadi</string>
+    <string name="welcome">welcome!</string>
 </resources>
