--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,10 +34,15 @@
     <string name="location_no_granted">Location No Granted</string>
 
     <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
+    <string name="title_search">Search</string>
     <string name="title_notifications">Notifications</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="title_profile">Frisnadi</string>
+    <string name="title_profile">Profile</string>
     <string name="welcome">welcome!</string>
+    <string name="favorites">Favorites</string>
+    <string name="all">All</string>
+    <string name="beach">Beach</string>
+    <string name="museum">Museum</string>
+    <string name="temple">Temple</string>
 </resources>
