--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">VLOC</string>
     <string name="login">Login</string>
-    <string name="message_welcome_page">Come join and share your destination here with Us</string>
-    <string name="title_welcome_page">Hi, There!</string>
+    <string name="message_welcome_page">"Explore Interesting Places Around You and Discover Hidden Wonders!"</string>
+    <string name="title_welcome_page">Welcome!</string>
     <string name="title_signup_page">Please complete your data first</string>
     <string name="email">Email</string>
     <string name="password">Password</string>
@@ -35,9 +35,7 @@
 
     <string name="title_home">Home</string>
     <string name="title_search">Search</string>
-    <string name="title_notifications">Notifications</string>
 
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_profile">Profile</string>
     <string name="welcome">welcome!</string>
     <string name="favorites">Favorites</string>
@@ -45,4 +43,11 @@
     <string name="beach">Beach</string>
     <string name="museum">Museum</string>
     <string name="temple">Temple</string>
+    <string name="get_started">Let\'s Start!</string>
+    <string name="theme">Theme</string>
+    <string name="register_word_in_login">Don\'t have an accout? Please, Register Now!</string>
+    <string name="result">Result</string>
+    <string name="title_details">Details</string>
+    <string name="login_in_register_activity">or Login</string>
+    <string name="login_first">Login First!</string>
 </resources>
